--- a/CapstoneFinalProject_ChicogoCrimeDataAnalysis.ipynb
+++ b/CapstoneFinalProject_ChicogoCrimeDataAnalysis.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "This project has choosen one of the metropolises in USA, Chicago as the investigation object. The time span of interest is 8 years spanning the year of 2008. The objective of the project is to provide an insight of the crime data scraped from Chicago Data Portal and conclude the impact of 2008 crisis on Chicago's crime rate. Additionally, the census data of Chicago from 2008 to 2012 will be investigated to find the impact of crime, particularly after 2008, on the population and economy of individual community and the whole city. \n",
     "\n",
-    "The targeting audience of the project with its elaborate visualisation results will benefit any groups of audiences who are interested in economy-crime topic or those who are concerned about crime rate when doing investment or business such as real estate and small business."
+    "The target audience of the project with its elaborate visualisation results will benefit any groups of audiences who are interested in economy-crime topic or those who are concerned about crime rate when doing investment or business such as real estate and small business."
    ]
   },
   {
